--- a/projeto-tarefa/src/main/resources/templates/listarProjetos.html
+++ b/projeto-tarefa/src/main/resources/templates/listarProjetos.html
@@ -83,7 +83,9 @@
             <p><strong>ID do Projeto:</strong> <span th:text="${proj.id}">ID do Projeto</span></p> <!-- Adicione esta linha -->
             <p><strong>Descrição:</strong> <span th:text="${proj.descricao}">Descrição do Projeto</span></p>
             <p><strong>Data de Criação:</strong> <span th:text="${#temporals.format(proj.dataCriacao, 'dd/MM/yyyy HH:mm')}">Data de Criação</span></p>
-            <p><strong>Status:</strong> <span th:text="${proj.status ? 'Entregue' : 'Não entregue'}">Status do Projeto</span></p>
+			<p><strong>Prazo:</strong> <span th:text="${#temporals.format(proj.prazo, 'dd/MM/yyyy HH:mm')}">Prazo</span></p>
+			<p><strong>Data de Entrega:</strong> <span th:text="${#temporals.format(proj.dataEntrega, 'dd/MM/yyyy HH:mm')}">Data de entrega</span></p>
+			<p><strong>Status:</strong> <span th:text="${proj.status ? 'Entregue' : 'Não entregue'}">Status do Projeto</span></p>
 			<h3>Tarefas:</h3>
             <ul>
 				<li th:each="tarefa : ${proj.tarefas}">
